<resources>
    <string name="app_name">SingBiker</string>

    <string name="individual_route_actionbar_label">Choose route</string>
    <string name="individual_trip_actionbar_label">Trip information</string>
    <string name="history_actionbar_label">History</string>
    <string name="trip_actionbar_label">Trip</string>
    <string name="settings_actionbar_label">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_item_routeplanner">Plan route</string>
    <string name="navigation_drawer_item_favorites">Favorites</string>
    <string name="navigation_drawer_item_history">History</string>
    <string name="navigation_drawer_item_haze">Haze information</string>
    <string name="navigation_drawer_item_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_input">Clear input</string>
    <string name="action_save_trip">Save trip</string>
    <string name="action_discard_trip">Discard trip</string>
    <string name="action_remove_trip">Remove trip</string>
    <string name="action_edit_location">Edit location</string>
    <string name="action_delete_all">Delete all</string>
    <string name="enter_delete">Enter deletion</string>
    <string name="select_all">Select all</string>
    <string name="return_delete">Cancel</string>
    <string name="action_trip_info">Trip info</string>
    <string name="action_change_route">Change route</string>
    <string name="action_save_settings">Save settings</string>
    <string name="action_discard_settings">Discard settings</string>

    <string name="route_plot_button_description">Plot route</string>

    <string name="individual_trip_textview_text"><u>Summary:</u>\nTotal distance:\n%1$.2f %3$s\n\nAverage speed:\n%2$.2f %4$s</string>

    <string name="trip_dialog_title">Trip info</string>
    <string name="trip_dialog_message">Total distance:\n%1$.2f %3$s\n\nAverage speed:\n%2$.2f %4$s</string>
    <string name="trip_dialog_button_text">OK</string>

    <string name="history_textview_no_trips_text">No trips saved.\nCycle more!</string>

    <string name="settings_textview_unit_system">Unit system:</string>
    <string name="settings_radiobutton_metric">Metric (km)</string>
    <string name="settings_radiobutton_imperial">Imperial (mile)</string>
    <string name="settings_textview_pcn_color">PCN Color:</string>
    <string name="settings_textview_non_pcn_color">Non-PCN Color:</string>

    <string name="history_delete_dialog_name">Delete</string>
    <string name="history_delete_dialog_message">Delete the selected items ?</string>
    <string name="history_delete_dialog_cancel">Cancel</string>
    <string name="history_delete_dialog_confirm">Confirm</string>
</resources>
