<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/enter_delete"
        android:orderInCategory="1"
        android:title="@string/enter_delete"
        android:icon="@drawable/ic_appbar_thrash"
        app:showAsAction="always"
        android:visible="true"/>

    <item
    android:id="@+id/return_delete"
    android:orderInCategory="1"
    android:title="@string/return_delete"
    android:icon="@drawable/ic_appbar_cross"
    app:showAsAction="always"
    android:visible="false"/>


    <item
        android:id="@+id/select_all"
        android:orderInCategory="1"
        android:title="@string/select_all"
        android:icon="@drawable/ic_appbar_checkbox"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:title="@string/action_delete_all"
        android:icon="@drawable/ic_appbar_thrashx"
        app:showAsAction="always"
        android:visible="false"/>

</menu>